# CommandLauncher

./: .gitignore  CommandLauncher.spec  README.md  build_windows.bat  pyproject.toml
docs/superpowers/plans/: 2026-06-29-project-launcher-implementation.md  2026-06-30-ui-modernization-implementation.md
docs/superpowers/specs/: 2026-06-29-project-launcher-design.md  2026-06-30-ui-modernization-design.md
src/command_launcher/: __init__.py  app.py  command_runner.py  config_store.py  main.py  models.py  resources.py
src/command_launcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/command_launcher/ui/: ansi_parser.py  dialogs.py  main_window.py  styles.py  terminal_panel.py  terminal_widget.py
tests/: test_ansi_parser.py  test_command_runner.py  test_config_store.py  test_imports.py  test_models.py  test_packaging_docs.py  test_terminal.py  test_ui_imports.py
tools/: generate_app_icon.py
