[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "command-launcher"
version = "0.1.0"
description = "Windows project launcher desktop utility"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  'pywinpty>=3.0; platform_system == "Windows"',
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyinstaller>=6.0",
]

[project.scripts]
command-launcher = "command_launcher.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
